		dev_osiop.
20081219	Continuing a little bit on the osiop SCRIPTS ISA.
20081221	Implementing an instruction combination for M88K idle loop
		detection (works with OpenBSD/mvme88k).
		Adding a dummy LUNA 88K machine mode (machine_luna88k.c).
20081229	Continuing on the osiop SCRIPTS ISA.
20081231	More progress on dev_osiop.c.
20090101	FINALLY the osiop works well enough to let OpenBSD detect
		SCSI devices! :-)
		After some more hacking, everything is finally stable enough
		to allow OpenBSD/mvme88k to be installed onto a disk image!
20090102	Optimizing the osiop SCSI device a bit; a default scripted
		install of OpenBSD/mvme88k has dropped from 30 minutes to 10.
		Fixing a bug which was caused by instructions like subu.co
		with a destination register of r0 being treated as nop.
		Various updates to make the source code build better on
		Linux (Ubuntu 8.10), and with GNU make.

==============  RELEASE 0.4.7  ==============

20090103	Merging fixes from the main trunk.
20090122	Merging in fdiv.sss and fadd.dsd from the main trunk.
20090123	NetBSD/hpcmips can now be installed and run using serial
		console (i.e. without -X), in addition to using the
		framebuffer.

==============  RELEASE 0.4.7.1  ==============

20090215	Updating the guest OS page for HelenOS 0.4.0.
20090513	Fixing the MIPS tne, teq, tge, tgeu, tlt, and tltu instructions
		to allow non-zero "code" values.
		Adding a new Linux/Malta "variant 2" entry to the unsupported
		guest OS page.
20090518	Changing the 8253 interrupt mechanism to assert interrupts
		regardless of "mode" bits, causing Linux/Malta to get further.
		Hacking on piix4 a bit to attempt to please Linux/Malta;
		interrupts are lost.
20090610	Making configuration files work again! (Thanks to Wu Kan for
		noticing this bug.)
20090611	Documentation updates (NetBSD 5 etc).
20090621	Adding a hack for the pcc2 PSCALEADJ register, making it
		possible to install and run OpenBSD/mvme88k 4.5.
		NetBSD/evbmips and /cobalt 5.0 can now run.